src/main/java/com/example/timelist/Error/GroupNotFoundException.java
package com.example.timelist.Error;

public class GroupNotFoundException extends RuntimeException {
}
